@@ -3982,7 +3982,9 @@ enum : uint16_t
     STR_TRACK_DESIGN_BLOCK_BRAKE_SPEED_RESET = 6579,
 
     STR_RESET = 6580,
-    STR_RESET_SHORTCUT_KEYS_PROMPT = 6581
+    STR_RESET_SHORTCUT_KEYS_PROMPT = 6581,
+
+    STR_SHORTCUT_OPEN_KEYBOARD_SHORTCUTS_WINDOW = 6582,
 
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
