@@ -10,6 +10,7 @@
 - Improved: [#19764] Miscellaneous scenery tab now grouped next to the all-scenery tab.
 - Improved: [#19830] “Highlight path issues” will now hide wall elements.
 - Improved: [#19905] Add prompt before resetting shortcut keys.
+- Improved: [#19953] Add keyboard shorcut to Keyboard Shortcuts window.
 - Fix: [#12598] Number of holes is not set correctly when saving track designs.
 - Fix: [#13130] Android always defaulting to UK locale for language, currency and temperature.
 - Fix: [#18895] Responding mechanic blocked at level crossing.
